--- a/games.html
+++ b/games.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link rel="stylesheet" type="text/css" href="main.css">
 		<link rel="stylesheet" type="text/css" href="games.css">
 		<link rel="icon" href="./images/favicon.ico" type="image/gif" sizes="16x16">
-		<title>Magiczny Czarodziej / Gry</title>
+		<title>Przemysław Pitus / Gry</title>
 		<meta charset="UTF-8">
 	</head>
 	<body>
 		<div id="header">
-			<a href="index.html">Magiczny Czarodziej</a> / Gry
+			<a href="index.html">Przemysław Pitus</a> / Gry
 		</div>
 		<div id="games">
 			<!-- Inne -->
