--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="main.css">
+		<link rel="stylesheet" type="text/css" href="home.css">
 		<link rel="icon" href="./images/favicon.ico" type="image/gif" sizes="16x16">
-		<title>Magiczny Czarodziej</title>
+		<title>Przemysław Pitus</title>
 		<meta charset="UTF-8">
 	</head>
 	<body>
 		<div id="content">
 			<div id="header">
-				Magiczny Czarodziej
+				Przemysław Pitus
 			</div>
 			<div id="links">
-				<a href="https://github.com/MagicznyCzarodziej">GitHub</a> / <a href="http://mamyszpiega.herokuapp.com/">Spyfall</a> / <a href="./games.html">Gry</a>
+				<a href="https://github.com/MagicznyCzarodziej">GitHub</a> / <a href="http://mamyszpiega.herokuapp.com/">Spyfall</a> / <a href="./games.html">Gry</a> / <a href="./portfolio.html">Portfolio</a>
 			</div>
 		</div>
 	</body>
