--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				Przemysław Pitus
 			</div>
 			<div id="links">
-				<a href="https://github.com/MagicznyCzarodziej">GitHub</a> / <a href="http://mamyszpiega.herokuapp.com/">Spyfall</a> / <a href="./games.html">Gry</a> / <a href="./portfolio.html">Portfolio</a>
+				<a href="https://github.com/MagicznyCzarodziej">GitHub</a> <span>/</span> <a href="http://mamyszpiega.herokuapp.com/">Spyfall</a> <span>/</span> <a href="./games.html">Gry</a> <span>/</span> <a href="./portfolio.html">Portfolio</a>
 			</div>
 		</div>
 	</body>
