--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,11 @@
 		</div>
 		<div id="projects">
             <div class="project">
-                <div class="cover"><img src="https://i.imgur.com/pubHVNG.png" alt=""></div>
+                <div class="cover"><a href="https://i.imgur.com/pubHVNG.png" target="_blank"><img src="https://i.imgur.com/pubHVNG.png" alt=""></a></div>
                 <div class="content">
-                    <div class="title">MamySzpiega <a href="http://mamyszpie.ga"><img src="./images/external-link.svg" alt=""></a></div>
+                    <div class="title">
+                        <a href="http://mamyszpie.ga">MamySzpiega <img src="./images/external-link.svg" alt=""></a>
+                    </div>
                     <div class="description">Imprezowa gra wieloosobowa</div>
                     <div class="technologies">
                         <span>Technologie</span>
@@ -27,9 +29,11 @@
                 </div>
             </div>
             <div class="project">
-                <div class="cover"><img src="https://i.imgur.com/laIQMkl.png" alt=""></div>
+                <div class="cover"><a href="https://i.imgur.com/laIQMkl.png" target="_blank"><img src="https://i.imgur.com/laIQMkl.png" alt=""></a></div>
                 <div class="content">
-                    <div class="title">P.I.T.U.S.  <a href="https://github.com/MagicznyCzarodziej/PITUS"><img src="./images/external-link.svg" alt=""></a></div>
+                    <div class="title">
+                        <a href="https://github.com/MagicznyCzarodziej/PITUS">P.I.T.U.S. <img src="./images/external-link.svg" alt=""></a>
+                    </div>
                     <div class="description">Program do zarządzania szkolnymi szafkami</div>
                     <div class="technologies">
                         <span>Technologie</span>
@@ -40,9 +44,11 @@
                 </div>
             </div>
             <div class="project">
-                <div class="cover"><img src="https://i.imgur.com/7XmEGam.png" alt=""></div>
+                <div class="cover"><a href="https://i.imgur.com/7XmEGam.png" target="_blank"><img src="https://i.imgur.com/7XmEGam.png" alt=""></a></div>
                 <div class="content">
-                    <div class="title">mHome <a href="https://github.com/MagicznyCzarodziej/MagicHome2"><img src="./images/external-link.svg" alt=""></a></div>
+                    <div class="title">
+                        <a href="https://github.com/MagicznyCzarodziej/MagicHome2">mHome <img src="./images/external-link.svg" alt=""></a>
+                    </div>
                     <div class="description">System inteligentnego domu</div>
                     <div class="technologies">
                         <span>Technologie</span>
@@ -55,36 +61,40 @@
                 </div>
             </div>
             <div class="project">
+                    <div class="cover"><img src="https://via.placeholder.com/300x150?text=WIP" alt=""></div>
+                    <div class="content">
+                        <div class="title">
+                            <a href="https://github.com/MagicznyCzarodziej/Paragon">Paragon <img src="./images/external-link.svg" alt=""></a>
+                        </div>
+                        <div class="description">Aplikacja do kontrolowania wydatków</div>
+                        <div class="technologies">
+                            <span>Technologie</span>
+                            <ul>
+                                <li>Node.js + Express</li>
+                                <li>MySQL (Sequelize)</li>
+                                <li>Stylus</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            <div class="project">
                 <div class="cover"><img src="https://via.placeholder.com/300x150?text=WIP" alt=""></div>
                 <div class="content">
-                    <div class="title">MemeFinder <a href="https://github.com/MagicznyCzarodziej/memefinder"><img src="./images/external-link.svg" alt=""></a></div>
-                    <div class="description">Wyszukiwarka obrazków</div>
+                    <div class="title">
+                        <a href="https://github.com/MagicznyCzarodziej/memefinder">MemeFinder <img src="./images/external-link.svg" alt=""></a>
+                    </div>
+                    <div class="description">Wyszukiwarka obrazków na podstawie tagów</div>
                     <div class="technologies">
                         <span>Technologie</span>
                         <ul>
                             <li>Node.js + Express</li>
                             <li>MongoDB</li>
                             <li>Imgur API</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="project">
-                <div class="cover"><img src="https://via.placeholder.com/300x150?text=WIP" alt=""></div>
-                <div class="content">
-                    <div class="title">Paragon <a href="https://github.com/MagicznyCzarodziej/Paragon"><img src="./images/external-link.svg" alt=""></a></div>
-                    <div class="description">Aplikacja do kontrolowania wydatków</div>
-                    <div class="technologies">
-                        <span>Technologie</span>
-                        <ul>
-                            <li>Node.js + Express</li>
-                            <li>MySQL (Sequelize)</li>
-                            <li>Stylus</li>
+                            <li>Vue</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>	
-        <script src="portfolioSlider.js"></script>
 	</body>
 </html>	
