--- a/portfolio.html
+++ b/portfolio.html
@@ -56,12 +56,13 @@
                             <li>Node.js + Express</li>
                             <li>MongoDB</li>
                             <li>Arduino</li>
+                            <li>Raspberry Pi</li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="project">
-                    <div class="cover"><img src="https://via.placeholder.com/300x150?text=WIP" alt=""></div>
+                    <div class="cover"><img src="https://i.imgur.com/2B8j8ps.png" alt=""></div>
                     <div class="content">
                         <div class="title">
                             <a href="https://github.com/MagicznyCzarodziej/Paragon">Paragon <img src="./images/external-link.svg" alt=""></a>
@@ -78,7 +79,7 @@
                     </div>
                 </div>
             <div class="project">
-                <div class="cover"><img src="https://via.placeholder.com/300x150?text=WIP" alt=""></div>
+                <div class="cover"><img src="https://i.imgur.com/NQZOjmt.png" alt=""></div>
                 <div class="content">
                     <div class="title">
                         <a href="https://github.com/MagicznyCzarodziej/memefinder">MemeFinder <img src="./images/external-link.svg" alt=""></a>
