Update MemeFinder image

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             <div class="project">
-                <div class="cover"><img src="https://i.imgur.com/NQZOjmt.png" alt=""></div>
+                <div class="cover"><img src="https://i.imgur.com/jL6izFM.png" alt=""></div>
                 <div class="content">
                     <div class="title">
                         <a href="https://github.com/MagicznyCzarodziej/memefinder">MemeFinder <img src="./images/external-link.svg" alt=""></a>
